# 8months-for-AI

./: Logistic_regression_Student.ipynb  Multi_Processing.py  README.md  Trying_Default.py  altair_vega.ipynb  assignment.ipynb  chart.html  collectionPractice.py  convolutional_neural_network.ipynb  data.csv  dataset.py  decorator.py  dendogram.py  exceptions.py  function.py  itertools.py  json_learning.py  lambda.py  logging.py  main.py  matplotlib_basics.ipynb  person.json  protfolioPrompting.html  requirement.txt  requirements.txt  restAPI.py  seaborn_intro.ipynb  strings.py  threads.py  train_model.py  try.ipynb  unit1.py  unit2.py
Asyncio/: Basic_tasks.py  asynchronous.py  coroutine.py  event.py  future.py  gather.py  semaphore.py  synchronization.py  task_group.py
Asyncio/Python/: Fast_api_linear_regression.py  asyncio_linear_regression.ipynb
Data Wrangling/: Data_Wrangling_on_SDOT.ipynb
data_visualization/: Datacamp_for_beginner.ipynb  HistoricalPrices.csv
loandecision/: Makefile  README.md  pyproject.toml
loandecision/docs/: mkdocs.yml
loandecision/docs/docs/: index.md
loandecision/loandecision/: __init__.py  dataset.py  features.py  plots.py
loandecision/loandecision/modeling/: predict.py  train.py
mysql/: Show all the customers whose creditLimit is greater than 20000.csv  mysqlsampledatabase.sql
notebooks/: asyncio.py  try.ipynb
pandas/: data_wrangling_pandas.ipynb  data_wrangling_student (1).ipynb
