[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "loandecision"
version = "0.0.1"
description = "LoanDecision is a FastAPI app that predicts loan approval or denial based on user inputs using a decision tree model. This is assignmentso learning way."
authors = [
  { name = "Sajan Fellowship2025" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["loandecision"]
include = ["pyproject.toml", "loandecision/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["loandecision"]
force-sort-within-sections = true

